takers: app.js added Spinner, fixed whitespace

--- a/takers/src/components/App.css
+++ b/takers/src/components/App.css
@@ -49,5 +49,8 @@
 }
 
 .loading {
-  margin-top: 10em;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
