--- a/takers/src/components/index.css
+++ b/takers/src/components/index.css
@@ -40,6 +40,7 @@ body {
   min-height: 100vh;
   font-size: 1.6rem;
   line-height: 1.6;
+  background: var(--gray);
 }
 
 .container {
